<?xml version="1.0"?>
<package format="2">
  <name>data_pkg</name>
  <version>0.0.1</version>
  <description>Package to handle creation of map, odometry commands, and measurements to feed the EKF.</description>
  <maintainer email="kevin.robb@alumni.ou.edu">Kevin Robb</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- <build_depend>ekf_pkg</build_depend>
  <exec_depend>ekf_pkg</exec_depend>
  <build_depend>ukf_pkg</build_depend>
  <exec_depend>ukf_pkg</exec_depend> -->

  <export>
  </export>
</package>
